<resources>
    <string name="app_name">happ</string>

    <string name="title_activity_panel_control"></string>
    <string name="title_activity_actos_bondad">Actos de bondad</string>
    <string name="title_activity_valoracion_dia">Agradecimiento</string>
    <string name="title_activity_tareas_realizadas">Tareas realizadas</string>
    <string name="title_activity_questionary">Cuestionario</string>
    <string name="title_activity_video">Video</string>
    <string name="title_activity_video_pre">Instrucciones del video</string>
    <string name="title_activity_video_post">Preguntas del video</string>

    <string name="cargando">Cargando...</string>
    <string name="continuar">Continuar</string>
    <string name="aceptar">Aceptar</string>

    <string name="estudio_titulo">ESTUDIO TÍTULO</string>
    <string name="estudio_texto_01">El objetivo de este documento es informarte sobre el estudio de investigación que estamos realizando, aprobado por la Comisión Deontológica de la Facultad de Psicología, en el que te invitamos a participar. Nuestra intención en que recibas la información correcta y suficiente para que puedas decidir si deseas participar. Tu participación es totalmente voluntaria, puedes decidir no participar, o cambiar tu decisión y retirarte durante el estudio.</string>
    <string name="estudio_texto_02">¿Por qué hacemos este estudio? Deseamos desarrollar un programa de promoción del bienestar personal en población general basado en los fundamentos de la Psicología Positiva  a través de las nuevas tecnologías y evaluar su eficacia.</string>
    <string name="estudio_texto_03">¿Qué te pedimos que hagas? El programa consiste en realizar durante una semana ciertas actividades a través de una aplicación en tu  smartphone llamada Happ, dirigidas a mejorar tu  bienestar psicológico. Estas actividades derivan de la investigación entre otros de Sonja Lyubomisrky y, a modo de ejemplo, una actividad podría ser una lista de agradecimiento en la cual pienses y escribas varias cosas por las que te sientas agradecido, una actividad de actos de bondad, donde se te alentará a realizar un acto de bondad hacia otra persona, etc. Una vez aceptes este compromiso serás enlazado a la url para bajarte la aplicación.Ten en cuenta que al tratarse de un estudio de investigación, también podrías formar parte de un grupo control, en el cual también realizarás ciertas actividades, pero estas no esperamos que deriven directamente en una mejora de tu biestar psicológico.</string>
    <string name="estudio_texto_04">Además tendrás que contestar a unos breves cuestionarios sobre emociones positivas y bienestar al inicio y al final del estudio.</string>
    <string name="estudio_texto_05">¿Cómo se protegerá tu intimidad? En todo momento garantizaremos la seguridad y confidencialidad de los resultados obtenidos en el estudio. Las respuestas a los cuestionarios serán anónimas, asignando un código numérico a cada participante que protegerá su identidad. Solo los investigadores del estudio tendremos acceso a dichos datos codificados. La app no registrará datos del usuario del mismo ni solicitará permisos para acceder a sus contenidos o a otras aplicaciones.</string>
    <string name="estudio_texto_06">¿Tienes alguna duda? Estaremos encantados de aclararla a través del correo electrónico de contacto (mgil07@ucm.es).</string>
    <string name="estudio_texto_07"></string>
    <string name="estudio_texto_08"></string>

    <string name="menu_icono_1"></string>
    <string name="menu_icono_2"></string>
    <string name="menu_icono_3"></string>
    <string name="menu_icono_4"></string>
    <string name="menu_icono_5">Empezar Actividad</string>
    <string name="menu_icono_6"></string>


    <string name="actos_bondad_cita_01">\"Mucha gente pequeña, en lugares pequeños, haciendo cosas pequeñas, puede cambiar el mundo\"</string>
    <string name="actos_bondad_cita_02">Varios estudios muestran que ayudar a otros nos distrae de nuestros pensamientos y problemas. En un estudio del 2015 se encontró que realizar pequeños actos de bondad nos ayuda a lidiar con nuestro propio estrés y nos hace sentir mejor.</string>
    <string name="actos_bondad_cita_03">Los estudios muestran también que realizar actos de bondad regularmente nos hace felices durante bastante tiempo, pero la clave es la variedad en estos actos.</string>
    <string name="actos_bondad_cita_04">1. Desde happ! recomendamos realizar de 3 a 5 actos de bondad al día, para notar resultados.</string>
    <string name="actos_bondad_cita_05">2. Recuerda que la variedad es la clave, sorpréndenos añadiendo cualquier acto que se te ocurra.</string>

    <string name="valoracion_dia_cita_01">\"Everything is a present (todo es un regalo)\"</string>
    <string name="valoracion_dia_cita_02">A continuación te vamos a proponer una actividad que puede tener un efecto positivo en tu bienestar si la realizas todos los días.</string>
    <string name="valoracion_dia_cita_03">Esta actividad tendrá una duración de 7 días, una semana completa, sólo 7 días, pero es importante que no te saltes ninguno. Si esto sucediera, no te preocupes sigue al día siguiente, pero recuerda que para que sea efectivo tienes que ser consistente.</string>
    <string name="valoracion_dia_cita_04">1.Te avisaremos cada día para  acceder a la aplicación. Procura que sea un momento en el que estés tranquilo y puedas dedicar al menos 5 minutos.</string>
    <string name="valoracion_dia_cita_05">2.Todos los días te llegará un recordatorio. Tendrás que escribir sobre cosas por las que estés agradecid@ en el día que realices la actividad. Recuerda que la variedad es la clave. Por ejemplo: -"Hoy estaba lloviendo y una compañera se ha acercado corriendo con su paraguas para que no me mojara. Es maravilloso tener compañeros así"-.</string>
    <string name="valoracion_dia_hoy">Hoy</string>
    <string name="valoracion_dia_ayer">Ayer</string>
    <string name="valoracion_dia_sin_datos">No hay valoración en este día.</string>
    <string name="fin_valoracion">Ya has realizado la actividad por hoy.Recuerda acceder mañana de nuevo a la aplicación.Gracias!</string>

    <string name="valoracion_dia_control_01">\"Everything is a present (todo es un regalo)\"</string>
    <string name="valoracion_dia_control_02">A continuación te vamos a proponer una actividad que puede tener un efecto positivo en tu bienestar si la realizas todos los días.</string>
    <string name="valoracion_dia_control_03">Esta actividad tendrá una duración de 7 días, una semana completa, sólo 7 días, pero es importante que no te saltes ninguno. Si esto sucediera, no te preocupes sigue al día siguiente, pero recuerda que para que sea efectivo tienes que ser consistente.</string>
    <string name="valoracion_dia_control_04">1.Te avisaremos cada día para  acceder a la aplicación. Procura que sea un momento en el que estés tranquilo y puedas dedicar al menos 5 minutos.</string>
    <string name="valoracion_dia_control_05">2.Todos los días te llegará un recordatorio. Se trata de una tarea que mejorará tus habilidades de organización.Se trata de realizar un esquema mental de las cinco tareas principales que realizaste el día anterior  y escribirlas en forma de lista.Por ejemplo "Terminé el trabajo de historia","Apunté a los niños a natación","Ordené la ropa" </string>


    <string name="instrucciones_agradecimiento">"Hay muchas cosas en nuestra vida, ya sean grandes o pequeñas por las que estar agradecido. Piensa en los acontecimientos de este día y escribe en las líneas siguientes hasta cinco cosas que agradecer del día de hoy."</string>
    <string name="instrucciones_control">"Hay muchas cosas en nuestra vida, ya sean grandes o pequeñas por las que estar agradecido. Piensa en los acontecimientos de este día y escribe en las líneas siguientes hasta cinco cosas que agradecer del día de hoy."</string>



    <string name="instrucciones">Instrucciones</string>
    <string name="empezar_ahora">EMPEZAR AHORA</string>
    <string name="realizar_ahora">EMPEZAR ACTIVIDAD</string>
    <string name="guardar">GUARDAR</string>
    <string name="salir">SALIR</string>
    <string name="no_mostrar_texto">No volver a mostrar este texto</string>
    <string name="eduardo_galeano">Alice Sommer</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Acerca de ...</string>
    <string name="sexo">Sexo:</string>
    <string name="edad">Edad:</string>
    <string name="estadoCivil">Estado civil:</string>
    <string name="nivelEstudios">Nivel de estudios:</string>

    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>

    <string name="soltero">Solter@</string>
    <string name="casado">Casad@</string>
    <string name="divorciado">Divorciad@</string>
    <string name="viudo">Viud@</string>

    <string name="configuracion">Configuración</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="paginador_cuestinario">Página %1$d de %2$d</string>
    <string name="pregunta_cuestinario">%1$s</string>

    <string name="video_instrucciones_01">A continuación vas a ver un video que dura sólo cinco minutos.</string>
    <string name="video_instrucciones_02">Es importante que estés atent@ porque al finalizar te vamos a hacer una pregunta sobre el mismo. Si no puedes ver el video ahora, accede a la aplicación cuando puedas hacerlo.</string>
    <string name="preguntaGrupoA">¿Con qué familiar estuvo Alice Sommer en el campo de concentración?.\n\n Estuvo con su....</string>
    <string name="preguntaGrupoB">¿Cúal es la palabra clave?.\n \nLa palabra clave es...\n </string>
    <string name="cuantoGusto">Puntua de 0 a 10 cúanto te ha gustado el video siendo 0 nada en absoluto y 10 lo máximo</string>




</resources>

