<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="happ.es.happ.VideoPreActivity"
    tools:showIn="@layout/activity_video_pre">


    <LinearLayout
        android:id="@+id/instrucciones"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <!-- Contenido -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">


            <!-- Textos -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/video_instrucciones_01"
                android:textAlignment="viewStart"
                android:textColor="#696969"
                android:textSize="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/video_instrucciones_02"
                android:textAlignment="viewStart"
                android:textColor="#696969"
                android:textSize="12dp" />

        </LinearLayout>


        <!-- Botonera -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingBottom="50dp"
            >

            <!-- Continuar -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/continuar"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="12dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/boton_largo_valoracion_dia"
                android:onClick="continuar"  />

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
